--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,6 @@
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    = favicon_link_tag 'anna.png', rel: 'apple-touch-icon', type: 'image/png'
+    = favicon_link_tag 'anna.png'
   %body
     = yield
